--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "cra-template-recoil",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
+  "author": "Alexander Grischuk <alexgrischuk@gmail.com",
+  "main": "template.json",
+  "description": "A light weight Create React App template with Recoil for state management",
+  "keywords": [
+    "react",
+    "create-react-app",
+    "cra-template",
+    "template",
+    "recoil",
+    "state management"
+  ],
+  "files": [
+    "template",
+    "template.json"
+  ],
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -12,7 +27,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean-files": "rm -rf ./template/public ./template/src",
+    "copy-files": "cp -a ./src/. template/src && cp -a ./public/. template/public",
+    "prepublishOnly": "yarn clean-files && yarn copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
