--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "clean-files": "rm -rf ./template/public ./template/src",
-    "copy-files": "cp -a ./src/. template/src && cp -a ./public/. template/public",
+    "copy-files": "cp -a ./src/. template/src && cp -a ./public/. template/public && cp README.md template/",
     "prepublishOnly": "yarn clean-files && yarn copy-files"
   },
   "eslintConfig": {
